<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.centaury.driverjalurangkot.LoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
        <!--Header Start-->
        <LinearLayout
            android:id="@+id/headerlogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon"
                android:layout_marginLeft="10dip"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Driver Jalur Angkot"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dip"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <!--Header End-->

        <!--Login Form-->
        <LinearLayout
            android:id="@+id/loginform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_below="@+id/headerlogin">

            <!--Email/Phone Number-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutlogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000">

                <EditText
                    android:id="@+id/inputlogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:hint="@string/hint_login"/>

            </android.support.design.widget.TextInputLayout>

            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/inputpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Login button -->
            <Button android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/btn_login"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"/>

            <!-- Link to Registration Screen -->
            <TextView android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="New to Member? Register here"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="#0b84aa"/>

        </LinearLayout>
        <!--Login Form End-->

        <!--Footer Start-->
        <LinearLayout
            android:id="@+id/footerlogin"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat"
            android:layout_below="@+id/loginform"
            android:orientation="vertical">
        </LinearLayout>
        <!--Footer End-->

    </RelativeLayout>

</ScrollView>
